--- a/textfighter/textfighter.html
+++ b/textfighter/textfighter.html
@@ -48,7 +48,7 @@
         <a href="https://github.com/seanmjohns/Text-Fighter">
           <img id="project-img" src="textfighter.png"></img>
         </a>
-        <span id="project-desc">Text Fighter is a game engine that allows the for creation of modpacks which can change the game slightly or completely rewrite it. There is a default pack that players do not have to download separately. All one has to do is download the jar are run it to play. Save files are free to be edited by the user to increase the possibilities. I personally enjoy Text Fighter due to its flexibility and ease.</span>
+        <span id="project-desc">Text Fighter is a game engine that allows the for creation of modpacks which can change the game slightly or completely rewrite it. There is a vanilla pack that players do not have to download separately. All one has to do is download the jar are run it to play. Save files are free to be edited by the user to increase the gaming possibilities. I personally enjoy Text Fighter due to its flexibility and ease. The guide can be found on the GitHub <a style="padding:0px" href="https://github.com/seanmjohns/Text-Fighter/wiki">wiki</a>.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
@@ -60,7 +60,7 @@
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a href="https://seanmjohns.github.io/textfighter/textfighter-1.2-HOTFIX-1.jar">textfighter-1.2-HOTFIX-1.jar</a>
+              <a href="https://seanmjohns.github.io/textfighter/textfighter-1.3-Snapshot-1.jar">textfighter-1.3-Snapshot-1.jar</a>
             </div>
           </div>
         </div>
@@ -82,8 +82,10 @@
           </div>
           <img class="gallery-image" src="gallery/menuchoices.png"></img>
           <img class="gallery-image" src="gallery/enemiestofight.png"></img>
+          <img class="gallery-image" src="gallery/gui_saves.png"></img>
           <img class="gallery-image" src="gallery/enemy_stats.png"></img>
           <img class="gallery-image" src="gallery/player_stats.png"></img>
+          <img class="gallery-image" src="gallery/gui_menu.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
