--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Contact - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="stickynav.js"></script>
     <link rel="stylesheet" href="navbar.css"></link>
@@ -15,13 +15,13 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="calc/calc.html">Calc</a>
-          <a class="project-link" href="textfighter/textfighter.html">Text Fighter</a>
-          <a class="project-link" href="talk/talk.html">Talk</a>
+          <a class="project-link" href="projects/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="projects/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="projects/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="projects/calc/calc.html">Calc</a>
+          <a class="project-link" href="projects/textfighter/textfighter.html">Text Fighter</a>
+          <a class="project-link" href="projects/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
@@ -46,17 +46,17 @@
       <h2 id="contact-header">Contact</h2>
       <div class="content-container" id="github" title="github">
         <a href="https://github.com/seanmjohns">
-          <img src="github-logo.png" id="github-logo"></img>
+          <img src="images/github-logo.png" id="github-logo"></img>
         </a>
         <span class="notes">You can contact me through GitHub (<strong><a href="https://github.com/seanmjohns" class="intextlink">seanmjohns</a></strong>).</span>
       </div>
       <div class="content-container" id="email" title="email">
-        <img src="email.png" id="email-logo"></img>
+        <img src="images/email.png" id="email-logo"></img>
         <span class="notes">Email me at <strong>seanmjohns1@gmail.com</strong>. I check my email often, so it is likely you will be able to get a hold of me.</span>
       </div>
       <div class="content-container" id="linkedin" title="linkedin">
         <a href="https://linkedin.com/in/seanmjohns1">
-          <img src="LI-In-Bug.png" id="linkedin-logo"></img>
+          <img src="images/LI-In-Bug.png" id="linkedin-logo"></img>
         </a>
         <span class="notes">Contact me through LinkedIn (<strong><a href="https://linkedin.com/in/seanmjohns1" class="intextlink">seanmjohns1</a></strong>).</span>
       </div>
