--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Projects - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="stickynav.js"></script>
     <link rel="stylesheet" href="navbar.css"></link>
@@ -15,13 +15,13 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="calc/calc.html">Calc</a>
-          <a class="project-link" href="textfighter/textfighter.html">Text Fighter</a>
-          <a class="project-link" href="talk/talk.html">Talk</a>
+          <a class="project-link" href="projects/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="projects/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="projects/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="projects/calc/calc.html">Calc</a>
+          <a class="project-link" href="projects/textfighter/textfighter.html">Text Fighter</a>
+          <a class="project-link" href="projects/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
@@ -44,10 +44,10 @@
   		}</script>
     <div id="primary">
       <div class="content_container" id="intro">
-        <a href="https://github.com/seanmjohns">
-          <img id="profile" src="github-profile.png" alt="github profile"></img>
+        <a href="https://linkedin.com/in/seanmjohns1/">
+          <img id="profile" src="images/github-profile.png" alt="github profile"></img>
         </a>
-        <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, C, C++, Python, and Bash.</span>
+        <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, Python, C, C++, and Bash.</span>
       </div>
       <h2 id="projects_header">Projects</h2>
       <div id="projects">
@@ -57,7 +57,7 @@
               <span class="project_name">Dodger</span>
               <span class="project_desc">Fast-paced survival</span>
             </div>
-            <img src="dodger/dodger.png"></img>
+            <img src="projects/dodger/dodger.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
@@ -66,7 +66,7 @@
               <span class="project_name">Tetris</span>
               <span class="project_desc">Fast-paced Classic</span>
             </div>
-            <img src="tetris/tetris.png"></img>
+            <img src="projects/tetris/tetris.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
@@ -75,7 +75,7 @@
               <span class="project_name">Minesweeper</span>
               <span class="project_desc">Classic Puzzler</span>
             </div>
-            <img src="minesweeper/minesweeper.png"></img>
+            <img src="projects/minesweeper/minesweeper.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
@@ -84,7 +84,7 @@
               <span class="project_name">Sub Trouble</span>
               <span class="project_desc">Sea-Based Defense</span>
             </div>
-            <img src="sub_trouble/sub_trouble.png"></img>
+            <img src="projects/sub_trouble/sub_trouble.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
@@ -93,7 +93,7 @@
               <span class="project_name">Calc</span>
               <span class="project_desc">Terminal Calculator</span>
             </div>
-            <img src="calc/calc.png"></img>
+            <img src="projects/calc/calc.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
@@ -102,7 +102,7 @@
               <span class="project_name">Text Fighter</span>
               <span class="project_desc">Text Game Engine</span>
             </div>
-            <img src="textfighter/textfighter.png"></img>
+            <img src="projects/textfighter/textfighter.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
@@ -111,7 +111,7 @@
               <span class="project_name">Talk</span>
               <span class="project_desc">Client/Server Chat</span>
             </div>
-            <img src="talk/talk.png"></img>
+            <img src="projects/talk/talk.png"></img>
           </a>
         </div>
       </div>
