--- a/projects/minesweeper/minesweeper.html
+++ b/projects/minesweeper/minesweeper.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calc - Sean Johnson</title>
+    <title>Minesweeper - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
-    <script type="text/javascript" src="../stickynav.js"></script>
-    <link rel="stylesheet" href="../navbar.css"></link>
-    <link rel="stylesheet" href="../project.css"></link>
+    <script type="text/javascript" src="../../stickynav.js"></script>
+    <link rel="stylesheet" href="../../navbar.css"></link>
+    <link rel="stylesheet" href="../../project.css"></link>
   </head>
   <body>
     <div>
@@ -15,20 +15,20 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="../dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="../tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="../minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="../sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="../calc/calc.html">Calc</a>
-          <a class="project-link" href="../textfighter/textfighter.html">Text Fighter</a>
-          <a class="project-link" href="../talk/talk.html">Talk</a>
+          <a class="project-link" href="../../projects/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="../../projects/calc/calc.html">Calc</a>
+          <a class="project-link" href="../../projects/textfighter/textfighter.html">Text Fighter</a>
+          <a class="project-link" href="../../projects/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="../index.html">Home</a>
+        <a class="nav-button" href="../../index.html">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="../contact.html">Contact</a>
+        <a class="nav-button" href="../../contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -43,12 +43,12 @@
     		}
   		}</script>
     <div id="primary">
-      <h2 id="project-name">Calc</h2>
+      <h2 id="project-name">Minesweeper</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/seanmjohns/calc">
-          <img id="project-img" src="calc.png"></img>
+        <a href="https://github.com/seanmjohns/Minesweeper">
+          <img id="project-img" src="minesweeper.png"></img>
         </a>
-        <span id="project-desc">Calc is a simple terminal calculator that supports addition, subtraction, multiplication, division, exponents, roots, absolute value, parenthesis, and trigonometric functions. You can get steps to calculate the expression and output the result in scientific notation.</span>
+        <span id="project-desc">This game is a take on the classic minesweeper game. The player must flag all mines without uncovering a single one. If one is uncovered, the game is lost.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
@@ -56,11 +56,11 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/seanmjohns/calc/releases">Github</a>
+              <a href="https://github.com/seanmjohns/Minesweeper/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a>-</a>
+              <a href="https://seanmjohns.github.io/minesweeper/minesweeper-2.1.jar">minesweeper-2.1.jar</a>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
           <span class="subheader" id="requirements-header">Requirements</span>
           <div class="container-body">
             <ul>
-              <li>None</li>
+              <li>Java 11</li>
             </ul>
           </div>
         </div>
@@ -80,14 +80,15 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="gallery/piping.png"></img>
-          <img class="gallery-image" src="gallery/steps.png"></img>
-          <img class="gallery-image" src="gallery/console.png"></img>
-          <img class="gallery-image" src="gallery/scientific_notation.png"></img>
-          <span id="no-images">It looks like we have no images for this project</span>
+          <img class="gallery-image" src="gallery/changingsize.png"></img>
+          <img class="gallery-image" src="gallery/ingame.png"></img>
+          <img class="gallery-image" src="gallery/gamover.png"></img>
+          <img class="gallery-image" src="gallery/gamewon.png"></img>
+          <img class="gallery-image" src="gallery/paused.png"></img>
+          <span id="no-images">It looks like we have no images for this project.</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
-        <script type="text/javascript" src="../gallery.js"></script>
+        <script type="text/javascript" src="../../gallery.js"></script>
       </div>
     </div>
   </body>
