--- a/projects/talk/talk.html
+++ b/projects/talk/talk.html
@@ -3,9 +3,9 @@
   <head>
     <title>Talk - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
-    <script type="text/javascript" src="../stickynav.js"></script>
-    <link rel="stylesheet" href="../navbar.css"></link>
-    <link rel="stylesheet" href="../project.css"></link>
+    <script type="text/javascript" src="../../stickynav.js"></script>
+    <link rel="stylesheet" href="../../navbar.css"></link>
+    <link rel="stylesheet" href="../../project.css"></link>
   </head>
   <body>
     <div>
@@ -15,20 +15,20 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="../dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="../tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="../minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="../sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="../calc/calc.html">Calc</a>
-          <a class="project-link" href="../textfighter/textfighter.html">Text Fighter</a>
-          <a class="project-link" href="../talk/talk.html">Talk</a>
+          <a class="project-link" href="../../projects/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="../../projects/calc/calc.html">Calc</a>
+          <a class="project-link" href="../../projects/textfighter/textfighter.html">Text Fighter</a>
+          <a class="project-link" href="../../projects/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="../index.html">Home</a>
+        <a class="nav-button" href="../../index.html">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="../contact.html">Contact</a>
+        <a class="nav-button" href="../../contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -87,10 +87,10 @@
           <img class="gallery-image" src="gallery/newroom.png"></img>
           <img class="gallery-image" src="gallery/namechange.png"></img>
           <img class="gallery-image" src="gallery/leave.png"></img>
-          <span id="no-images">It looks like we have no images for this project</span>
+          <span id="no-images">It looks like we have no images for this project.</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
-        <script type="text/javascript" src="../gallery.js"></script>
+        <script type="text/javascript" src="../../gallery.js"></script>
       </div>
     </div>
   </body>
